수정 비번버그 수정